# PythonProject-1_sky.pro

./: README.md  pyproject.toml  requirements.txt
src/: decorators.py  external_api.py  fin_read.py  generators.py  main.py  masks.py  processing.py  search.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_fin_read.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_search.py  test_utils.py  test_widget.py
